<resources>
    <string name="app_name">News</string>

    <!-- Articles content descriptions -->
    <string name="content_desc_article_read">Article Read</string>
    <string name="content_desc_open_drawer">Open navigation drawer</string>
    <string name="content_desc_close_drawer">Close navigation drawer</string>

    <!-- Categories -->
    <string name="categories">Categories</string>
    <string name="all_category">All</string>
    <string name="automobile_category">Automobile</string>
    <string name="business_category">Business</string>
    <string name="entertainment_category">Entertainment</string>
    <string name="miscellaneous_category">Miscellaneous</string>
    <string name="politics_category">Politics</string>
    <string name="science_category">Science</string>
    <string name="startup_category">Startup</string>
    <string name="technology_category">Technology</string>
    <string name="world_category">World</string>

    <!-- Empty state -->
    <string name="articles_empty_state_message">No results found :(</string>

    <!-- Errors -->
    <string name="generic_error">An error occurred. Try again.</string>
    <string name="network_error">Problems in your connection. Verify and try again.</string>
    <string name="service_unavailable_error">The service is unavailable, try later.</string>
    <string name="database_error">There was a problem to access data. Try again.</string>
    <string name="retry">Retry</string>
    <string name="mark_article_as_read_error">There was a problem to mark article as read. Try again.</string>
    <string name="mark_article_as_unread_error">There was a problem to mark article as unread. Try again</string>

    <!-- Article details -->
    <string name="article_details_title">Article details</string>
    <string name="read_more_button">Read more</string>
    <string name="article_author">by %1s ▪ %2s</string>
    <string name="article_details_empty_state">An error occurred :(</string>

    <!-- Articles details content descriptions -->
    <string name="content_desc_mark_article_as_read">Mark article as read</string>
    <string name="content_desc_mark_article_as_unread">Mark article as unread</string>

</resources>