<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group
        android:id="@+id/categories"
        android:checkableBehavior="single"
        tools:showIn="navigation_view">

        <item
            android:id="@+id/allCategoryItem"
            android:icon="@drawable/drawer_icon_selector"
            android:title="@string/all_category" />
        <item
            android:id="@+id/automobileCategoryItem"
            android:icon="@drawable/drawer_icon_selector"
            android:title="@string/automobile_category" />
        <item
            android:id="@+id/businessCategoryItem"
            android:icon="@drawable/drawer_icon_selector"
            android:title="@string/business_category" />
        <item
            android:id="@+id/entertainmentCategoryItem"
            android:icon="@drawable/drawer_icon_selector"
            android:title="@string/entertainment_category" />
        <item
            android:id="@+id/miscellaneousCategoryItem"
            android:icon="@drawable/drawer_icon_selector"
            android:title="@string/miscellaneous_category" />
        <item
            android:id="@+id/politicsCategoryItem"
            android:icon="@drawable/drawer_icon_selector"
            android:title="@string/politics_category" />
        <item
            android:id="@+id/scienceCategoryItem"
            android:icon="@drawable/drawer_icon_selector"
            android:title="@string/science_category" />
        <item
            android:id="@+id/startupCategoryItem"
            android:icon="@drawable/drawer_icon_selector"
            android:title="@string/startup_category" />
        <item
            android:id="@+id/technologyCategoryItem"
            android:icon="@drawable/drawer_icon_selector"
            android:title="@string/technology_category" />
        <item
            android:id="@+id/worldCategoryItem"
            android:icon="@drawable/drawer_icon_selector"
            android:title="@string/world_category" />
    </group>
</menu>